[tool.poetry]
name = "anonymous-telegram-chat"
version = "0.1.0"
description = "Telegram bot for anonymous chatting"
authors = ["Danil Sidoruk <danilsidoruknv@yandex.ru>"]
license = "The Unlicense"
readme = "README.md"
packages = [{include = "anonymous_telegram_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
